[package]
name = "smml"
version = "0.1.0"
authors = ["Robert Węcławski <r.weclawski@gmail.com>"]

[features]
default = []
metal = ["gfx-backend-metal"]
gl = ["gfx-backend-gl"]
dx12 = ["gfx-backend-dx12"]
vulkan = ["gfx-backend-vulkan"]

[dependencies]
gfx-hal = { path = "https://github.com/gfx-rs/gfx/tree/master/src/hal", version = "0.1" }
gfx-backend-empty = { git = "https://github.com/gfx-rs/gfx/tree/master/src/backend/empty", version = "0.1" }

[dependencies.gfx-backend-gl]
git = "https://github.com/gfx-rs/gfx/tree/master/src/backend/gl"
version = "0.1"
features = ["glutin"]
optional = true

[dependencies.gfx-backend-vulkan]
git = "https://github.com/gfx-rs/gfx/tree/master/src/backend/vulkan"
version = "0.1"
optional = true

[target.'cfg(any(target_os = "macos", all(target_os = "ios", target_arch = "aarch64")))'.dependencies.gfx-backend-metal]
git = "https://github.com/gfx-rs/gfx/tree/master/src/backend/metal"
version = "0.1"
optional = true

[target.'cfg(windows)'.dependencies.gfx-backend-dx12]
git = "https://github.com/gfx-rs/gfx/tree/master/src/backend/dx12"
version = "0.1"
optional = true