[package]
name = "smml"
version = "0.1.0"
authors = ["Robert Węcławski <r.weclawski@gmail.com>"]
edition = "2018"

[features]
default = ["gfx-backend-vulkan"]
metal = ["gfx-backend-metal"]
gl = ["gfx-backend-gl"]
dx12 = ["gfx-backend-dx12"]
vulkan = ["gfx-backend-vulkan"]


[dependencies]
winit = "0.17"
glsl-to-spirv = "0.1.4"
gfx-hal = { git = "https://github.com/gfx-rs/gfx", version = "0.1" }
gfx-backend-empty = { git = "https://github.com/gfx-rs/gfx", version = "0.1" }

[dependencies.gfx-backend-gl]
git = "https://github.com/gfx-rs/gfx"
version = "0.1"
features = ["glutin"]
optional = true

[dependencies.gfx-backend-vulkan]
git = "https://github.com/gfx-rs/gfx"
version = "0.1"
optional = true

[target.'cfg(any(target_os = "macos", all(target_os = "ios", target_arch = "aarch64")))'.dependencies.gfx-backend-metal]
git = "https://github.com/gfx-rs/gfx"
version = "0.1"
optional = true

[target.'cfg(windows)'.dependencies.gfx-backend-dx12]
git = "https://github.com/gfx-rs/gfx"
version = "0.1"
optional = true