[package]
name = "ketch-core"
version = "0.1.0"
authors = ["Robert Węcławski <r.weclawski@gmail.com>"]
edition = "2018"

[dependencies]
vulkano = "0.11.1"
vulkano-shaders = "0.11"
vulkano-win = "0.11"
log = "0.4.6"
winit = "0.18"
quick-error = "1.2.2"
image = "0.20.1"
wayland-client = "=0.21.7"
nalgebra-glm = "0.2.0"