[package]
name = "ketch-editor"
version = "0.1.0"
authors = ["Robert Węcławski <r.weclawski@gmail.com>"]
edition = "2018"

[dependencies]
log = "0.4.6"
vulkano = "0.11.1"
conrod_core = "0.62.0"
conrod_vulkano = "0.62.0"
conrod_winit = "0.62.0"
quick-error = "1.2.2"
winit = "0.18"
image = "0.21.0"
ketch-core = { path = "../ketch-core" }